--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "netlify-cms-app": "^2.12.25",
-    "next": "latest",
+    "next": "^12.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
