--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "with-typescript",
+  "name": "gemma-music-blog",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "export": "npm run build && next export"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/darvese/gemma-music-blog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/darvese/gemma-music-blog/issues"
+  },
+  "homepage": "https://github.com/darvese/gemma-music-blog#readme",
   "dependencies": {
-    "netlify-cms-app": "^2.12.25",
-    "next": "^12.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "next": "^12.0.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "frontmatter-markdown-loader": "^3.6.1",
-    "typescript": "4.0"
-  },
-  "license": "MIT"
+    "@babel/core": "^7.17.2",
+    "@babel/preset-react": "^7.16.7",
+    "frontmatter-markdown-loader": "^3.6.3"
+  }
 }
