--- a/package.json
+++ b/package.json
@@ -1,33 +1,57 @@
 {
-  "name": "gemma-music-blog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "npm run build && next export"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/darvese/gemma-music-blog.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "gatsby-starter-blog",
+  "private": true,
+  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "bugs": {
-    "url": "https://github.com/darvese/gemma-music-blog/issues"
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
-  "homepage": "https://github.com/darvese/gemma-music-blog#readme",
   "dependencies": {
-    "next": "^12.0.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "gatsby": "^4.7.1",
+    "gatsby-plugin-feed": "^4.7.0",
+    "gatsby-plugin-gatsby-cloud": "^4.7.0",
+    "gatsby-plugin-google-analytics": "^4.7.0",
+    "gatsby-plugin-image": "^2.7.0",
+    "gatsby-plugin-manifest": "^4.7.0",
+    "gatsby-plugin-offline": "^5.7.0",
+    "gatsby-plugin-react-helmet": "^5.7.0",
+    "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-remark-copy-linked-files": "^5.7.0",
+    "gatsby-remark-images": "^6.7.0",
+    "gatsby-remark-prismjs": "^6.7.0",
+    "gatsby-remark-responsive-iframe": "^5.7.0",
+    "gatsby-remark-smartypants": "^5.7.0",
+    "gatsby-source-filesystem": "^4.7.0",
+    "gatsby-transformer-remark": "^5.7.0",
+    "gatsby-transformer-sharp": "^4.7.0",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "typeface-merriweather": "0.0.72",
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/preset-react": "^7.16.7",
-    "frontmatter-markdown-loader": "^3.6.3"
+    "prettier": "^2.5.1"
+  },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "0BSD",
+  "main": "n/a",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+  },
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
 }
