--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@fontsource/cardo": "^4.5.1",
+    "@fontsource/caveat": "^4.5.3",
+    "@fontsource/courgette": "^4.5.1",
+    "@fontsource/eczar": "^4.5.2",
+    "@fontsource/gideon-roman": "^4.5.2",
+    "@fontsource/spectral": "^4.5.1",
+    "@fontsource/vollkorn": "^4.5.4",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.7.1",
     "gatsby-plugin-feed": "^4.7.0",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
@@ -17,6 +28,9 @@
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-styled-components": "^5.7.0",
+    "gatsby-plugin-typescript": "^4.7.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^5.7.0",
     "gatsby-remark-images": "^6.7.0",
     "gatsby-remark-prismjs": "^6.7.0",
@@ -29,10 +43,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.22",
     "prettier": "^2.5.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
